package com.greentree.engine.moon.render.mesh;

public interface RenderMesh {
	
	void bind();
	void unbind();
	
	void render();
	
}
