package com.greentree.engine.moon.render.texture;


public interface Texture {
	
	void bint(int slot);
	
}
